ingress.yaml
# ingress.yaml
# Dev Ingress for kubeadm + ingress-nginx (NodePort 30080 behind Terraform ALB)
# Namespace: dev
# Routes:
#   /     -> svc/web:80
#   /api  -> svc/spring-app:80
#   /ai   -> svc/ai-api:8000
# Apply:
#   kubectl apply -f ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ing
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-api
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
